# Master-Data-Scraper

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  clean_data.py  main.py  requirements-dev.txt  requirements.txt  setup.bat  setup.cfg  setup.py  setup.sh  setup_venv.sh
Domains/Sports/: __init__.py  base.py
Domains/Sports/NBA/: __init__.py  main.py  scraper.py
Domains/Sports/NFL/: __init__.py  main.py  scraper.py
Domains/Sports/NHL/: __init__.py  main.py  scraper.py
Domains/Sports/WNBA/: __init__.py  main.py  scraper.py
config/: __init__.py  blocked_domains.yaml  domains.yaml  settings.py  settings.yaml  stealth.yaml  user_agents.yaml
core/: __init__.py  async_scraper.py  crawler.py  exporter.py  fast_crawler.py  organizer.py  parser.py  relevance_analyzer.py  scraper.py  smart_crawler.py  sports_reference_scraper.py  stealth_scraper.py  validator.py  web_scraper.py
docs/: PURPOSE.md  README.md  TASKS.md
docs/dev/: ENHANCEMENTS.md  IMPROVEMENTS.md  PRD.md  README.md  TASKS.md
docs/user-guide/: 01-getting-started.md  02-quick-reference.md  03-examples.md  04-customization.md  05-stealth-mode.md  06-troubleshooting.md  README.md
utils/: __init__.py  cache.py  cli.py  exceptions.py  human_behavior.py  logger.py  rate_limiter.py  robots.py  stealth.py  user_agents.py
